<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nermi.gitettip.NewUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textColor="@color/colorGreenShade"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_name"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:id="@+id/newName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_surname"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:id="@+id/newSurname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:id="@+id/newEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:id="@+id/newPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:id="@+id/repeatedPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:layout_marginTop="10dp"
        android:onClick="sendNewUserInfo"
        />
</LinearLayout>
