<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nermi.gitettip.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/logo"
        android:src="@drawable/giv_et_tip"
        android:contentDescription="@string/logo_description"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="40dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/user_name"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:width="200dp"
        android:height="40dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/user_password"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

</LinearLayout>
